hugr-llvm/src/extension/snapshots/hugr_llvm__extension__float__test__fle@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/float.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i1 @_hl.main.1(double %0, double %1) {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca double, align 8
  %"2_1" = alloca double, align 8
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, ptr %"2_0", align 8
  store double %1, ptr %"2_1", align 8
  %"2_01" = load double, ptr %"2_0", align 8
  %"2_12" = load double, ptr %"2_1", align 8
  %2 = fcmp ole double %"2_01", %"2_12"
  %3 = select i1 %2, i1 true, i1 false
  store i1 %3, ptr %"4_0", align 1
  %"4_03" = load i1, ptr %"4_0", align 1
  store i1 %"4_03", ptr %"0", align 1
  %"04" = load i1, ptr %"0", align 1
  ret i1 %"04"
}
